roles/prepare-server/files/etc/sysconfig/iptables
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -s 10.176.0.0/16 -m state --state NEW -j ACCEPT
-A INPUT -s 192.168.0.0/16 -m state --state NEW -j ACCEPT
-A INPUT -s 213.140.195.244 -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
-A INPUT -s 81.4.145.214 -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
-A INPUT -s 213.140.195.244 -p udp -m state --state NEW --dport 60000:60010 -j ACCEPT
-A INPUT -s 81.4.145.214 -p udp -m state --state NEW --dport 60000:60010 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 10.176.2.228 -p tcp -m state --state NEW -m tcp --dport 10050 -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
COMMIT
